--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,13 @@
 
 # [Choice] .NET version: 6.0, 5.0, 3.1, 6.0-bullseye, 5.0-bullseye, 3.1-bullseye, 6.0-focal, 5.0-focal, 3.1-focal
 ARG VARIANT="6.0"
+
+# FAILS for 6.0, 6.0-focal, 6.0-bullseye-slim
 FROM mcr.microsoft.com/vscode/devcontainers/dotnet:0-${VARIANT}
+#   FAILS (build from Jan 25th 2021):
+# FROM mcr.microsoft.com/vscode/devcontainers/dotnet:0.202.2-6.0-focal
+#   SUCCEEDS (prior build from Dec 3rd 2021):
+# FROM mcr.microsoft.com/vscode/devcontainers/dotnet:0.202.1-6.0-focal
 
 # [Choice] Node.js version: none, lts/*, 16, 14, 12, 10
 ARG NODE_VERSION="none"
